--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": ">=8.11.2"
   },
   "dependencies": {
-    "bluebird": "^3.5.1",
+    "bluebird": "3.5.1",
     "lokijs": "1.5.5"
   },
   "devDependencies": {},
